[package]
name = "aiai"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A command-line productivity tool powered by AI large language models like llama3.2"
repository = "https://github.com/maifuwa/aiai"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.9", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termimad = "0.31.1"
